# worked

./: Cargo.toml  README.md  doc.sh  index.html  rust-toolchain.toml  wasm.sh  worker.js
src/: example.rs  html_macros.rs  lib.rs  worker.rs
