[package]
name = "wasm-workers"
description = "A library for running WebAssembly in web workers"
version = "0.3.0"
edition = "2021"
authors = ["Flora Hill"]
repository = "https://github.com/tascord/wasm-workers"
license = "MIT"
keywords = ["WASM", "Workers", "WebAssembly"]
categories = ["wasm", "web-programming", "concurrency"]
readme = "README.md"
homepage = "https://github.com/tascord/wasm-workers"

[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = { version = "0.5.28", default-features = false, optional = true }
wasm-bindgen = { version = "0.2.84", default-features = false, features = [
  "std",
  "spans",
] }
wasm-bindgen-futures = { version = "0.4.30", default-features = false }
web-sys = { version = "0.3.56", default-features = false, features = [
  "Blob",
  "Cache",
  "CacheStorage",
  "console",
  "Document",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlAnchorElement",
  "HtmlButtonElement",
  "HtmlCanvasElement",
  "HtmlCollection",
  "HtmlDivElement",
  "HtmlEmbedElement",
  "HtmlHeadingElement",
  "HtmlIFrameElement",
  "HtmlImageElement",
  "HtmlInputElement",
  "HtmlObjectElement",
  "HtmlOptionElement",
  "HtmlParagraphElement",
  "HtmlProgressElement",
  "HtmlSelectElement",
  "HtmlSpanElement",
  "HtmlTableCellElement",
  "HtmlTableElement",
  "HtmlTableRowElement",
  "HtmlTableSectionElement",
  "Navigator",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "ReadableStreamReadResult",
  "ScrollBehavior",
  "ScrollIntoViewOptions",
  "ScrollLogicalPosition",
  "ScrollToOptions",
  "Window",
  "Worker",
  "WorkerOptions",
  "WorkerType",
] }
js-sys = { version = "0.3.56", default-features = false }
futures-signals = { version = "0.3.24", default-features = false }
gloo = { version = "0.10.0", features = ["futures"] }
console_error_panic_hook = { version = "0.1.7", default-features = false }
url = { version = "2.2.2", default-features = false }
serde = { version = "1.0.136", features = ["derive"], default-features = false }
serde_json = { version = "1.0.79", default-features = false, features = [
  "arbitrary_precision",
] }
anyhow = { version = "1.0.55", default-features = false, features = ["std"] }
rayon = "1.5"
wasm-bindgen-rayon = "1.0"
tokio = { version = "1.32.0", features = ["sync", "rt"] }
serde-wasm-bindgen = "0.6.0"

[features]
default = ["example"]
example = ["dominator"]

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
cargo-args = ["-Z", "build-std=std,panic_abort"]
